# telco-customer-churn-project

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  telco_churn_analysis.ipynb
