[project]
name = "telco-customer-churn"
version = "0.1.0"
description = "Predict customer churn to avoid loss of customers"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "ipykernel>=6.30.1",
  "notebook>=7.0.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "pillow>=10.0.0",
  "tqdm>=4.65.0",
  "tensorflow[and-cuda]>=2.15.0",
  "pyspark>=4.1.0",
]
